fixes and stuff